Sync all content

--- a/content/resources/15-224s03-th.md
+++ b/content/resources/15-224s03-th.md
@@ -9,7 +9,9 @@ image_metadata:
     \ (Image courtesy of Alberto Vill\xE9n.)"
   credit: ''
   image-alt: Flags of the European Union and Spain wave outside an office building.
+learning_resource_types: []
 resourcetype: Image
 title: Flags of the European Union and Spain (thumbnail)
+type: OCWImage
 uid: 6da31463-cc63-4e1d-cdfb-8b356cb19205
 ---
