--- a/content/resources/15-224s03.md
+++ b/content/resources/15-224s03.md
@@ -9,7 +9,9 @@ image_metadata:
     \ (Image courtesy of Alberto Vill\xE9n.)"
   credit: ''
   image-alt: Flags of the European Union and Spain wave outside an office building.
+learning_resource_types: []
 resourcetype: Image
 title: Flags of the European Union and Spain
+type: OCWImage
 uid: 7a4b9001-1d4e-cbf7-1eac-5a3ed053c8f0
 ---
