--- a/content/resources/15-224s03-th.md
+++ b/content/resources/15-224s03-th.md
@@ -10,6 +10,7 @@ image_metadata:
   credit: ''
   image-alt: Flags of the European Union and Spain wave outside an office building.
 learning_resource_types: []
+ocw_type: OCWImage
 resourcetype: Image
 title: Flags of the European Union and Spain (thumbnail)
 uid: 6da31463-cc63-4e1d-cdfb-8b356cb19205
