--- a/content/resources/15-224s03.md
+++ b/content/resources/15-224s03.md
@@ -10,6 +10,7 @@ image_metadata:
   credit: ''
   image-alt: Flags of the European Union and Spain wave outside an office building.
 learning_resource_types: []
+ocw_type: OCWImage
 resourcetype: Image
 title: Flags of the European Union and Spain
 uid: 7a4b9001-1d4e-cbf7-1eac-5a3ed053c8f0
